--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card col-sm-12 col-md-6 col-lg-4 col-xl-3" style="width:400px">
+                <!-- <div class="card col-sm-12 col-md-6 col-lg-4 col-xl-3" style="width:400px">
                     <a href="#"><img class="card-img-top" src="./images/video1.png" alt="Card image"></a>
                     <div class="card-body">
                         <a href="#" class="chanel-link-icon" data-toggle="tooltip" data-placement="bottom" title="Đức Phúc Offical">
@@ -352,7 +352,7 @@
                             </a>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
 
